# HCMUT-CO3059-ComputerGraphics

./: .clang-format  .code-workspace  .gitattributes  .prettierrc.yml  Dockerfile.dev  README.md
.devcontainer/: Dockerfile
.devcontainer/linux/: devcontainer.json
.devcontainer/windows/: devcontainer.json
final-project/: CMakeLists.txt  main.cpp
final-project/components/: base.cpp  base.hpp  rail.cpp  rail.hpp  tile.cpp  tile.hpp
helper/: glut.pc
lab-1/: CMakeLists.txt  cube_dynamic.c  cube_static.c  square_dynamic.c  square_static.c
lab-2/: CMakeLists.txt  main.cpp
lab-2/components/: base.cpp  base.hpp  cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp  hollow_cylinder.cpp  hollow_cylinder.hpp  shape1.cpp  shape1.hpp  shape2.cpp  shape2.hpp  shape3.cpp  shape3.hpp  sphere.cpp  sphere.hpp
lab-3/: CMakeLists.txt  main.cpp
lab-3/components/: base.cpp  base.hpp  linker.cpp  linker.hpp  rail.cpp  rail.hpp  slidebar.cpp  slidebar.hpp
lab-camera/: CMakeLists.txt  program1.cpp  program2.cpp  program3.cpp
lab-light/: CMakeLists.txt  program1.cpp  program2.cpp  program3.cpp  program4.cpp
lab-mesh/: CMakeLists.txt  main.cpp  main.hpp
lab-mesh/components/: cube.cpp  shape1.cpp  shape2.cpp
lab-transformation/: CMakeLists.txt  program1.cpp  program2.cpp
